--- a/html/new.html
+++ b/html/new.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Internet Shop</title>
+    <title>Internet Shop - New</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/homePage.css">
@@ -43,8 +43,8 @@
                 </ul>
             </div>
             <div>
-                <a href="" class="txt-nav entrance">Entrance</a>
-                <a href="" class="txt-nav register">Registration</a>
+                <a href="./entrance.html" class="txt-nav entrance">Entrance</a>
+                <a href="./registration.html" class="txt-nav register">Registration</a>
             </div>
         </div>
     </nav>
