--- a/html/profil.html
+++ b/html/profil.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Internet Shop - Login</title>
+    <title>Internet Shop - Profil</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/homePage.css">
@@ -38,34 +38,51 @@
                         <a class="nav-link txt-nav" href="./reviews.html">Reviews</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link txt-nav disabled" href="" tabindex="-1" aria-disabled="true">Disabled</a>
+                        <a class="nav-link txt-nav" href="./profil.html">Profil</a>
                     </li>
                 </ul>
             </div>
             <div>
-                <a href="./entrance.html" class="txt-nav entrance">Login</a>
-                <a href="./registration.html" class="txt-nav register">Registration</a>
+                <a href="./entrance.html" class="txt-nav entrance">Exit</a>
             </div>
         </div>
     </nav>
 
-    <div class="entr-html">
-        <p>Entrance</p>
-    </div>
-    <div class="card-entr" style="width: 35rem;">
-        <div>
-            <p class="login-txt">Login</p>
-            <p><input class="login" type="text"></p>
-            <p class="pass-txt">Password</p>
-            <p><input class="pass" type="password"></p>
+    <div>
+        <div class="card-prof" style="width: 35rem;">
+            <p class="prof">Profil</p>
+            <div id="grid-prof">
+                <div class="item1">
+                    <img src="../img/SHOPIMG.jpg" alt="" class="img-profil">
+                </div>
+                <div class="item2 name">
+                    <p>Lorem ipsum dolor sit.</p>
+                </div>
+                <div class="item3 inf">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus quas soluta necessitatibus
+                        aliquid, fugit neque repellat quibusdam doloribus ratione incidunt?</p>
+                </div>
+                <div class="item4-1">
+                    <p><a href="#" class="settings-button">Settings</a></p>
+                </div>
+                <div class="item4-2">
+                    <p><a href="#" class="disabled-button disabled">Disabled</a></p>
+                </div>
+                <div class="item4-3">
+                    <p><a href="#" class="create-store-button">Create store</a></p>
+                </div>
+                <div class="item4-4">
+                    <p><a href="#" class="create-post-button">Create post</a></p>
+                </div>
+                <div class="item4-5">
+                    <p class="txt-inf-create-store">Allows you to create more than 5 posts for sale within 3 days</p>
+                </div>
+                <div class="item4-6">
+                    <p class="txt-inf-create-post">Allows you to create a post about the sale of things - maximum 5
+                        within 3 days</p>
+                </div>
+            </div>
         </div>
-        <p style="margin-top: 20px;"><a href="#" class="login-button">Login</a></p>
-    </div>
-
-    <div class="txt-lorem">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores distinctio, praesentium voluptate quia
-            a, reiciendis similique dolores quas iure, aspernatur magni provident natus? Repellat pariatur voluptatem
-            quae fuga labore vero!</p>
     </div>
 
     <script src="../js/home.js"></script>
