--- a/html/registration.html
+++ b/html/registration.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Internet Shop - Login</title>
+    <title>Internet Shop - Registration</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/homePage.css">
@@ -50,16 +50,20 @@
     </nav>
 
     <div class="entr-html">
-        <p>Entrance</p>
+        <p>Registration</p>
     </div>
     <div class="card-entr" style="width: 35rem;">
         <div>
-            <p class="login-txt">Login</p>
-            <p><input class="login" type="text"></p>
+            <p class="login-txt">Name Surname</p>
+            <p><input class="login-sur" type="text"></p>
+            <p class="email-txt">E-mail</p>
+            <p><input class="email" type="mail"></p>
             <p class="pass-txt">Password</p>
             <p><input class="pass" type="password"></p>
+            <p class="pass-txt">Confirm password</p>
+            <p><input class="pass" type="password"></p>
         </div>
-        <p style="margin-top: 20px;"><a href="#" class="login-button">Login</a></p>
+        <p style="margin-top: 20px;"><a href="#" class="login-button">Registration</a></p>
     </div>
 
     <div class="txt-lorem">
